**************
RECENT CHANGES
**************

======
1.83.0
======

* Added --skip-config option to prohibit loading of external config files.
* #251 Improve db:info with prefix and machine-readable output (by Melvyn Sopacua)
* #255 ConfigurationLoader::loadPluginConfig() Bug? (Thanks to Cyrill Schumacher)
* #196 New table group for db:dump: --strip="@search" (by mystix)
* Updated dependencies (PHPUnit, Composer, Twig, JUnit-XML)

======
1.82.0
======

* Moved sys:check command logic into dist config
* Changed Magento detection (for future Magento 2 support)
* Adds --noDownload option to InstallCommand (by Manuele Menozzi)
* Fix: config:set fix --encrypt input option (by Robert Coleman)
* Updated 3rd party dependencies

======
1.81.0
======

* script command: Do not prompt for variables, defined with "--define" option.
* script command: Added support for choices
* script command: Fixed resolution of other variables
* Added --define option to script:repo:run command
* Updated Symfony dependencies
* Fix flush to use Enterprise_PageCache_Model_Cache only for 1.11 and up (by Jay Becker)
* Added an '--add-routines' option to db:dump command. (by Pieter Hoste)
* #238 - Enable symlinks globally, with interactive

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net