@@ -10,6 +10,7 @@ RECENT CHANGES
 * #251 Improve db:info with prefix and machine-readable output (by Melvyn Sopacua)
 * #255 ConfigurationLoader::loadPluginConfig() Bug? (Thanks to Cyrill Schumacher)
 * #196 New table group for db:dump: --strip="@search" (by mystix)
+* #124 Feature Request: dev:log:size should support "human readable" flags. (by Alan Storm)
 * Updated dependencies (PHPUnit, Composer, Twig, JUnit-XML)
 
 ======
